--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "chengla-linux-unofficial",
   "version": "1.0.0",
-  "description": "An Electron application with React and TypeScript",
+  "description": "Unofficial chengla client for linux",
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://www.electronjs.org",
+  "author": "pokon548",
+  "homepage": "https://github.com/pokon548/chengla-for-linux",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
@@ -25,21 +25,21 @@
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
-    "@electron/notarize": "^1.2.3",
-    "@types/node": "^18.16.19",
+    "@electron/notarize": "^2.1.0",
+    "@types/node": "^20.4.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
     "@vitejs/plugin-react": "^4.0.3",
-    "electron": "^24.6.2",
-    "electron-builder": "^23.6.0",
+    "electron": "^25.3.0",
+    "electron-builder": "^24.4.0",
     "electron-vite": "^1.0.25",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.32.2",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.1.6",
