Add more builds

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
           "target": "Snap"
         },
         {
+          "target": "deb"
+        },
+        {
           "target": "zip"
         }
       ]
