--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
           "target": "deb"
         },
         {
+          "target": "rpm"
+        },
+        {
           "target": "zip"
         }
       ]
