--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "productName": "chengla",
     "linux": {
       "maintainer": "pokon548",
-      "icon": "build/icon.png",
+      "icon": "icon.png",
       "category": "Education",
       "target": [
         {
@@ -31,6 +31,15 @@
         },
         {
           "target": "zip"
+        }
+      ],
+      "extraResources": [
+        {
+          "from": "./build/",
+          "to": "",
+          "filter": [
+            "**/*"
+          ]
         }
       ]
     }
